[project]
name = "requestbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Satocu",email = "hojicimo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.13.0)",
    "python-dotenv (>=1.0.0)",
    "pydantic (>=2.0.0)",
    "pydantic-settings (>=2.0.0)"
]

[tool.poetry]
packages = [{include = "requestbot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
